# mudipu-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api-reference.md  cli-reference.md  configuration.md  getting-started.md  health-metrics.md
examples/: README.md  analysis_example.py  basic_example.py  config_example.py  mudipu.example.yaml  tools_example.py
src/mudipu/: __init__.py  __main__.py  config.py  context.py  decorators.py  models.py  settings.py  tracer.py  version.py
src/mudipu/analyzer/: __init__.py  analyzer.py  health.py  summary.py  visualizer.py
src/mudipu/capture/: __init__.py  llm.py  session.py  tools.py
src/mudipu/cli/: main.py
src/mudipu/exporters/: __init__.py  html_exporter.py  json_exporter.py  platform_exporter.py
src/mudipu/integrations/: __init__.py  openai_compat.py
src/mudipu/utils/: ids.py  json.py  redact.py  time.py  yaml.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_decorators.py  test_exporters.py  test_health_analyzer.py  test_models.py  test_tracer.py
