[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mudipu"
version = "1.0.0"
description = "Developer-facing instrumentation SDK for LLM applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Santhosh Nayak", email = "santhoshnayak0903@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
platform = [
    "mudipu-packages>=0.1.0",
]
health = [
    "sentence-transformers>=2.2.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "mudipu-packages>=0.1.0",
    "sentence-transformers>=2.2.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
]

[project.scripts]
mudipu = "mudipu.cli.main:cli"

[project.urls]
Homepage = "https://github.com/santnayak/mudipu-python"
Repository = "https://github.com/santnayak/mudipu-python.git"
Documentation = "https://docs.mudipu.dev"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
